# cs5212-renderer

./: CMakePresets.json  README.md
examples/: test_pngWrite.cpp
src/: CMakeLists.txt  FrameBuffer.cpp  FrameBuffer.h  pngWriter.cpp  vec.h
utests/: CMakeLists.txt  utest_FrameBuffer.cpp  utest_vec.cpp
